/*
 * stocks is client-server program to manage a household's food stock
 * Copyright (C) 2019  The stocks developers
 *
 * This file is part of the stocks program suite.
 *
 * stocks is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * stocks is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 */

package de.njsm.stocks.common.api;

import com.fasterxml.jackson.annotation.JsonGetter;

import java.math.BigDecimal;

public interface Price extends Entity<Price> {

    @JsonGetter
    BigDecimal price();

    @JsonGetter
    BigDecimal scale();

    @JsonGetter
    int groceryStore();

    @JsonGetter
    int food();

    @JsonGetter
    int scaledUnit();

    interface Builder<T> {
        T price(BigDecimal v);
        T scale(BigDecimal v);
        T groceryStore(int v);
        T food(int v);
        T scaledUnit(int v);
    }

    @Override
    default boolean isContainedIn(Price item, boolean increment) {
        return Entity.super.isContainedIn(item, increment) &&
                price().compareTo(item.price()) == 0 &&
                scale().compareTo(item.scale()) == 0 &&
                groceryStore() == item.groceryStore() &&
                food() == item.food() &&
                scaledUnit() == item.scaledUnit();
    }

    @Override
    default void validate() {
        Entity.super.validate();
    }
}
