' stocks is client-server program to manage a household's food stock
' Copyright (C) 2019  The stocks developers
'
' This file is part of the stocks program suite.
'
' stocks is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' stocks is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

@startuml

class user {
    {static} id: int
    version: int
    valid_time_start: OffsetDateTime
    valid_time_end: OffsetDateTime
    transaction_time_start: OffsetDateTime
    transaction_time_end: OffsetDateTime
    name: String
}

class user_device {
    {static} id: int
    version: int
    valid_time_start: OffsetDateTime
    valid_time_end: OffsetDateTime
    transaction_time_start: OffsetDateTime
    transaction_time_end: OffsetDateTime
    name: String
    technical_use_case: String?
}
note left: Every entity has a 'initiates' foreign key to this table

package Food <<Frame>> {

    class location {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        name: String
        description: String
    }

    class food {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        name: String
        to_buy: boolean
        expiration_offset: Period
        description: String
    }

    class food_item {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        eat_by: OffsetDateTime
    }

    class ean_number {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        number: String
    }
}

package Recipes <<Frame>> {

    class recipe {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        name: String
        instructions: String
        duration: Duration
    }

    class recipe_ingredient {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        amount: int
    }

    class recipe_product {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        amount: int
    }

    class scaled_unit {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        scale: BigDecimal
    }

    class unit {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        name: String
        abbreviation: String
    }
}

package Stores <<Frame>> {
    class grocery_chain {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        name: String
    }
    class grocery_store {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        name: String
    }
    class price  {
        {static} id: int
        version: int
        valid_time_start: OffsetDateTime
        valid_time_end: OffsetDateTime
        transaction_time_start: OffsetDateTime
        transaction_time_end: OffsetDateTime
        price: BigDecimal
        scale: BigDecimal
    }
}

class updates {
    {static} id: int
    table_name: String
    last_update: OffsetDateTime
}

package "Only Server" {
    class ticket {
        {static} id: int
        ticket: String
        created_on: OffsetDateTime
    }
}

package "Only Android" {
    class SearchSuggestion {
        {static} term: String
        last_queried: OffsetDateTime
    }
}

user_device -[dashed]-> user : belongs_to

ean_number -[dashed]-> food : identifies

food --> location : location?
food --> scaled_unit : store_unit

food_item --> location : stored_in
food_item -[dashed]-> food : of_type
food_item --> user : buys
food_item --> user_device : registers
food_item --> scaled_unit : unit

recipe_ingredient -[dashed]-> recipe : recipe
recipe_ingredient --> food : ingredient
recipe_ingredient --> scaled_unit : unit

recipe_product -[dashed]-> recipe : recipe
recipe_product --> food : product
recipe_product --> scaled_unit : unit

scaled_unit --> unit : unit

ticket -[dashed]-> user_device : belongs_device

grocery_store -[dashed]-> grocery_chain : grocery_chain
price -[dashed]-> grocery_store : grocery_store
price --> food : food
price --> scaled_unit : unit

@enduml
